# python_solo

./: .gitignore  .pre-commit-config.yaml  MISC_CONVENTIONS.md  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
src/erikpgjohansson/: __init__.py  asserts.py  atest.py  str.py
src/erikpgjohansson/so/: README_SOAR_MIRROR.TXT  README_SOAR_MIRROR.md  __init__.py  asserts.py  iddt.py  irfu_soar_mirror.py  read_modif_TC_csv.py  soar.py  soar_mirror.py  soar_utils.py  str.py  test_soar_mirror.py  utils.py
src/erikpgjohansson/so/soar/: __init__.py  irfu_mirror.py  mirror.py  soar.py  soar_mirror.py  soar_utils.py  test_mirror.py  utils.py
src/erikpgjohansson/solo/: asserts.py  copy_move_datasets_to_IRFU_dir_tree_shell.py  iddt.py  metadata.py  read_modif_TC_csv.py  str.py  utils.py
src/erikpgjohansson/solo/soar/: README_SOAR_MIRROR.md  __init__.py  const.py  dst.py  dwld.py  irfu_mirror.py  mirror.py  soar.py  test_mirror.py  tests.py  tools.py  utils.py
src/erikpgjohansson/solo/soar/appl/: __init__.py  irfu_mirror.py  irfu_mirror_shell.py  mtest_mirror.py  mtest_mirror_shell.py  test_mirror.py  test_mirror_shell.py
src/erikpgjohansson/solo/soar/mirrors/: __init__.py  irfu_mirror.py  irfu_mirror_shell.py  test_mirror.py  test_mirror_shell.py
tests/: mtest_erikpgjohansson_solo_soar_dwld.py  mtest_erikpgjohansson_solo_soar_tools.py  test_erikpgjohansson_so_iddt.py  test_erikpgjohansson_so_soar_utils.py  test_erikpgjohansson_so_utils.py  test_erikpgjohansson_solo_iddt.py  test_erikpgjohansson_solo_metadata.py  test_erikpgjohansson_solo_soar_dst.py  test_erikpgjohansson_solo_soar_dwld.py  test_erikpgjohansson_solo_soar_mirror.py  test_erikpgjohansson_solo_soar_soar.py  test_erikpgjohansson_solo_soar_tests.py  test_erikpgjohansson_solo_soar_utils.py  test_erikpgjohansson_solo_utils.py
