[metadata]
name = irfu-erikpgjohansson-solo
version = 1.0.0
author = Erik P G Johansson
author_email = erik.johansson@irf.se
description = Miscellaneous code for using with Solar Orbiter data, in particular mirroring SOAR.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent



[options]
# SOAR mirroring should work with at least
# numpy v1.18.5 and v1.19.5.
install_requires =
    codetiming
    numpy
package_dir =
    = src
packages = find:
# Python version required is not strictly known. Python 3.9 should work.
python_requires = >=3.9



[options.packages.find]
where = src
